--- a/res/translations/en.json
+++ b/res/translations/en.json
@@ -12,5 +12,6 @@
 	"createfolder": "Create folder",
 	"createfile": "Create file",
 	"delete": "Delete",
-	"enterfilename": "Enter filename"
+	"enterfilename": "Enter filename",
+	"compileall": "Regenerate everything"
 }
